# gravity-legacy

./: Cargo.toml  README.md
assets/: test.ldtk  test2.ldtk
assets/Maps/: Levels.ldtk
assets/Maps/Level_0/: IntGrid.csv
assets/Maps/Levels/: Level_0.ldtkl  Level_1.ldtkl  Level_10.ldtkl  Level_2.ldtkl  Level_3.ldtkl  Level_4.ldtkl  Level_5.ldtkl  Level_6.ldtkl  Level_7.ldtkl  Level_8.ldtkl  Level_9.ldtkl
assets/Maps/Levels/simplified/Level_0/: data.json
assets/Maps/Levels/simplified/Level_1/: IntGrid.csv  data.json
assets/Maps/Levels/simplified/Level_10/: data.json
assets/Maps/Levels/simplified/Level_2/: IntGrid.csv  data.json
assets/Maps/Levels/simplified/Level_3/: IntGrid.csv  data.json
assets/Maps/Levels/simplified/Level_4/: IntGrid.csv  data.json
assets/Maps/Levels/simplified/Level_5/: IntGrid.csv  data.json
assets/Maps/Levels/simplified/Level_6/: IntGrid.csv  data.json
assets/Maps/Levels/simplified/Level_7/: IntGrid.csv  data.json
assets/Maps/Levels/simplified/Level_8/: data.json
assets/Maps/Levels/simplified/Level_9/: data.json
assets/test/simplified/Level_0/: IntGrid.csv  data.json
example/: main.rs
src/: ascii.rs  aud.rs  components.rs  fadeout.rs  main.rs  slime.rs  slime_collision.rs  start_menu.rs  systems.rs
