[package]
name = "gravity_legacy_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
heron = { version = "3.0", features = ["2d"] }
bevy_ecs_ldtk = "0.3.0"
bevy_kira_audio = "0.10.0"
serde_json = "1.0.81"


[[example]]
name = "test"
path = "example/main.rs"

# [profile.release]
# opt-level = 'z'
# lto = "thin"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3